# dockerfiles

./: .gitignore
checkmk/: docker-compose.yml
gitea/: docker-compose.yaml
keycloak/: docker-compose.yml  docker-compose.yml~  oidc.conf
keycloak/conf/: keycloak-1.crt  keycloak-1.key
minio/: docker-compose.yml
nautobot-3.0.3/: pyproject.toml
nautobot-3.0.3/config/: nautobot_config.py
nautobot-3.0.3/environments/: docker-compose.base.yml
nautobot-onboarding/: invoke.example.yml  invoke.ldap.yml  invoke.mysql.yml  pyproject.toml
nautobot-onboarding/config/: nautobot_config.py
nautobot-onboarding/config.golden-config/: nautobot_config.py
nautobot-onboarding/config.golden-config-dlm/: nautobot_config.py
nautobot-onboarding/environments/: Dockerfile  creds.example.env  docker-compose.base.yml  docker-compose.postgres.yml  local.env
nautobot-simple/: docker-compose.yaml  local.example.env
smokeping/: docker-compose.yaml
smokeping-master/: Dockerfile  README.md
tig-stack/: .env~  Dockerfile.telegraf  docker-compose.yaml  env.sample
tig-stack/grafana/provisioning/dashboards/: cisco-lab-dashboard.json
tig-stack/grafana/provisioning/datasources/: influxdb.yaml  influxdb.yaml~
tig-stack/telegraf/: telegraf.conf  telegraf.conf~
tig-stack/telegraf/telegraf.d/: 10-snmp-lab-devices.conf  10-snmp-lab-devices.conf~  11-snmp-test-devices.old
traefik-portainer/: docker-compose.yml
