[tool.poetry]
name = "nerdfunk-nautobot-container"
version = "2.4.5"
description = "våeritas nautobot container including some plugins"
authors = ["Nerdfunk SOT <nomail@nerdfunk.net>"]

[tool.poetry.dependencies]
python = ">=3.9.2,<=3.12.12"
nautobot = "2.4.14"
nautobot-device-onboarding = "^4.2.6"
nautobot-ssot = ">=3.9.1"

# nautobot-golden-config = "^2.4.1"
# nautobot-device-lifecycle-mgmt = ">=3.1.1"

[tool.poetry.dev-dependencies]
invoke = "*"
toml = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
